syntax = "proto3";

option go_package = "pkg/grpc";

package myapp;


service GreetingService {
  // サーバーが持つメソッドの定義
  rpc Hello (HelloRequest) returns (HelloResponse);

  // サーバーストリーミング
  rpc HelloServerStream(HelloRequest) returns (stream HelloResponse);

  // クライアントストリーミング
  rpc HelloClientStream(stream HelloRequest) returns (HelloResponse);

  // 双方向ストリーミング
  rpc HelloBiStream(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}